# dm2_pracs

./: pyproject.toml  ques1.ipynb  ques3.ipynb  ques4.ipynb  ques5.ipynb
